@@ -1,3 +1,4 @@
+        - Experimental support for GEOIP_COUNTRY_EDITION_V6 ( Boris Zentner )
         - Add GEOIP_DOMAIN_EDITION support ( Boris Zentner )
 1.2.6 Sep 11th 2008
 	- GEOIP_METRO_CODE replace the depreciated GEOIP_DMA_CODE ( Boris Zentner )
